# Nao

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
Nao/: __init__.py  proxy.py  robot.py
Nao/core/: ALBehaviorManager.py  ALConnectionManager.py  __init__.py
nao/: __init__.py
src/: NaoRobot.h  main.cpp  proxy.cpp  proxy.h  robot.cpp  robot.h
src/Services/: Speech.cpp  Speech.h  macros.h
tests/: tests.py
